--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,8 @@
 {
     "name": "thijsvanderheijden/adventofcode",
     "require-dev": {
-        "symfony/var-dumper": "^5.3"
+        "symfony/var-dumper": "^5.3",
+        "phpunit/phpunit": "^9.5"
     },
     "autoload": {
         "psr-4": {
@@ -13,6 +14,5 @@
             "name": "Thijs van der Heijden",
             "email": "thijsvanderheijden@yoast.com"
         }
-    ],
-    "require": {}
+    ]
 }
